// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServiceChips> snapshot renders correctly when chips are passed 1`] = `
<div
  className="makeStyles-root-1 "
  data-testid="chipsContainer"
>
  <div
    className="makeStyles-chips-3"
    data-testid="chips"
  >
    <div
      className="MuiChip-root makeStyles-chip-4 MuiChip-colorSecondary MuiChip-deletableColorSecondary MuiChip-sizeSmall MuiChip-deletable"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="MuiChip-label MuiChip-labelSmall"
      >
        Testing chips
      </span>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorSecondary MuiChip-deleteIconSmall"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<ServiceChips> snapshot renders correctly when there are no props 1`] = `
<div
  className="makeStyles-root-1 "
  data-testid="chipsContainer"
>
  <div
    className="makeStyles-empty-2"
  />
</div>
`;

exports[`<ServiceChips> snapshot renders correctly when there is className 1`] = `
<div
  className="makeStyles-root-1 class-1"
  data-testid="chipsContainer"
>
  <div
    className="makeStyles-empty-2"
  />
</div>
`;
